Changed some files